# file-feedstock

recipe/: README.md  bld.bat  meta.yaml
recipe/patches/: 0001-Set-version-in-header.patch  0002-Add-Windows-header-imports.patch
recipe/win_build/: CMakeLists.txt  config.h.in
recipe/win_build/file/: CMakeLists.txt
recipe/win_build/file/doc/: CMakeLists.txt
recipe/win_build/file/magic/: CMakeLists.txt
recipe/win_build/file/magic/Magdir/: CMakeLists.txt
recipe/win_build/file/src/: CMakeLists.txt
recipe/win_build/file/tests/: CMakeLists.txt
recipe/win_build/win-headers/: dirent.h  getopt.h  magic.def  unistd.c  unistd.h
